# mcp-youtube-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/youtube_analyzer/: __init__.py  frames.py  server.py  transcript.py  utils.py  video_info.py  whisper.py
tests/: conftest.py  test_frames.py  test_integration.py  test_server.py  test_transcript.py  test_utils.py  test_video_info.py
